--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
 	"author": "Microsoft",
 	"license": "MIT",
 	"dependencies": {
+		"bcryptjs": "^2.4.3",
 		"express": "^5.1.0",
 		"express-handlebars": "^7.1.3",
+		"express-session": "^1.17.3",
 		"sqlite": "^5.1.1",
 		"sqlite3": "^5.1.7"
 	},
